--- a/media/css/dd_gmaps_module.css
+++ b/media/css/dd_gmaps_module.css
@@ -4,3 +4,17 @@
  * @copyright   Copyright (C) 2011 - 2017 Didldu e.K. | HR IT-Solutions
  * @license     http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only  
 **/
+#dd_gmaps {
+    background-color: #e5e3df;
+    height: auto;
+    overflow: hidden;
+    width: 100%;
+    min-height: 320px;
+}
+#dd_gmaps_overloader {
+    background-color: #e5e3df;
+    height: 450px;
+    position: relative;
+    margin-bottom: -450px;
+    z-index: 9;
+}
