--- a/media/css/dd_gmaps_module.css
+++ b/media/css/dd_gmaps_module.css
@@ -41,16 +41,20 @@
 }
 
 #dd_gmaps.fullsize {
-    position: absolute !important;
+    position: fixed !important;
     left: 0;
     top: 0;
+    bottom: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
     height: 100% !important;
     width: 100% !important;
-    z-index: 999;
+    z-index: 9999;
 }
 #dd_gmaps_fullsize.fullsize {
-    position: absolute;
+    position: fixed;
     right: 4px;
     top: 4px;
-    z-index: 9999;
+    z-index: 99999;
 }
