--- a/media/css/dd_gmaps_module.css
+++ b/media/css/dd_gmaps_module.css
@@ -72,7 +72,6 @@ div#dd_gmaps_gdpr_text {
     left: 10px;
     border: 2px solid #c4c4c4;
     font-size: 12px;
+    width: 80%;
     box-sizing: border-box;
-    width: 80% !important;
-    height: auto !important;
 }
