--- a/media/css/dd_gmaps_module.css
+++ b/media/css/dd_gmaps_module.css
@@ -1,77 +1,74 @@
+@charset "UTF-8";
 /**
  * @package    DD_GMaps_Module
  *
- * @author     HR-IT-Solutions GmbH Florian Häusler <info@hr-it-solutions.com>
+ * @author     HR-IT-Solutions GmbH Florian H├ñusler <info@hr-it-solutions.com>
  * @copyright  Copyright (C) 2011 - 2018 HR-IT-Solutions GmbH
  * @license    http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
  **/
 #dd_gmaps {
-    background-color: #e5e3df;
-    height: auto;
-    overflow: hidden;
-    width: 100%;
-    min-height: 320px;
-    position: relative;
-}
+  background-color: #e5e3df;
+  height: auto;
+  overflow: hidden;
+  width: 100%;
+  min-height: 320px;
+  position: relative; }
 
 #dd_gmaps img {
-    width: auto !important;
-    max-width: none !important;
-}
+  width: auto !important;
+  max-width: none !important; }
 
 #dd_gmaps > div {
-    height: 100% !important;
-    width: 100% !important;
-    position: absolute;
-}
+  height: 100% !important;
+  width: 100% !important;
+  position: absolute; }
 
 #dd_gmaps_overloader {
-    background-color: #e5e3df;
-    height: 450px;
-    position: relative;
-    margin-bottom: -450px;
-    z-index: 9;
-}
+  background-color: #e5e3df;
+  height: 450px;
+  position: relative;
+  margin-bottom: -450px;
+  z-index: 9; }
 
-#dd_gmaps .dd_gmaps_loader{
-    text-align: center;
-    width: 100%;
-    margin-top: 48%;
-    font-size: 16px;
-    line-height: 4%;
-}
+#dd_gmaps .dd_gmaps_loader {
+  text-align: center;
+  width: 100%;
+  margin-top: 48%;
+  font-size: 16px;
+  line-height: 4%; }
 
 #dd_gmaps.fullsize {
-    position: fixed !important;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    margin: 0;
-    padding: 0;
-    height: 100% !important;
-    width: 100% !important;
-    z-index: 9999;
-}
+  position: fixed !important;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  height: 100% !important;
+  width: 100% !important;
+  z-index: 9999; }
+
 #dd_gmaps_fullsize.fullsize {
-    position: fixed;
-    right: 4px;
-    top: 4px;
-    z-index: 99999;
-}
+  position: fixed;
+  right: 4px;
+  top: 4px;
+  z-index: 99999; }
 
 div#dd_gmaps_gdpr_text {
-    position: absolute;
-    cursor: pointer;
-    background-color: #fff;
-    color: #bd362f;
-    font-weight: bold;
-    display: inline-block;
-    bottom: 10px;
-    padding: 8px 18px;
-    left: 10px;
-    border: 2px solid #c4c4c4;
-    font-size: 12px;
-    width: 80%;
-    box-sizing: border-box;
-}
+  position: absolute;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  font-weight: 700;
+  display: inline-block;
+  bottom: 0;
+  left: 0;
+  padding: 8px 18px;
+  border: 2px solid #c4c4c4;
+  font-size: 12px;
+  width: 80%;
+  box-sizing: border-box;
+  text-align: center; }
+
+/*# sourceMappingURL=dd_gmaps_module.css.map */
